--- a/portugol/index.html
+++ b/portugol/index.html
@@ -1,4 +1,4 @@
-<html>
+<!-- <html>
     <head>
 
     </head> 
@@ -8,4 +8,4 @@
         </h1>
         <script src="script.js"></script>
     </body>   
-</html>
+</html> -->
