--- a/repeticoes/index.html
+++ b/repeticoes/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Repetições</h1>
-    <script src="for.js"></script>
+    <script src="parte1-6.js"></script>
 </body>
 </html>
