--- a/logica-js/DOM/selecao/index.html
+++ b/logica-js/DOM/selecao/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Início</title>
+    <!-- link para css -->
+     <link href="css/estilos.css" rel="stylesheet"/>
 </head>
+
 <body>
     <header>
         <h1>Logo</h1>
@@ -12,7 +16,7 @@
     <nav>
         <!--lista não ordenada-->
         <ul>
-            <li> <a href="index.html">Home</a></li>
+            <li> <a href="#">Home</a></li>
             <li> <a href="pages/sobre.html">Sobre nós</a></li>
             <li> <a href="https://google.com" target="_blank">Google</a></li>
         </ul>
@@ -22,5 +26,52 @@
             <li>Sobre</li>
         </ol> -->
     </nav>
+    <main>
+        <section>
+            <h2>Esportes</h2>
+            <div class="container">
+                <article>
+                    <h3>Futebol</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti totam voluptates laboriosam temporibus ex porro. Dolorem unde placeat ratione? Assumenda impedit pariatur porro perferendis tempore fuga corrupti modi atque sunt!</p>
+                </article>
+
+                <article>
+                    <h3>Natação</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti totam voluptates laboriosam temporibus ex porro. Dolorem unde placeat ratione? Assumenda impedit pariatur porro perferendis tempore fuga corrupti modi atque sunt!</p>
+                </article>
+
+                <article>
+                    <h3>Vôlei</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti totam voluptates laboriosam temporibus ex porro. Dolorem unde placeat ratione? Assumenda impedit pariatur porro perferendis tempore fuga corrupti modi atque sunt!</p>
+                </article>
+            </div>
+        </section>
+
+        <section>
+            <h2>Economia</h2>
+            <div class="container">
+                <article>
+                    <h4>Dólar</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur sequi, minus harum ad quae a similique libero quas porro impedit? Totam, voluptates. Expedita architecto natus cum voluptatum aliquam doloribus quisquam.</p>
+                </article>
+
+                <article>
+                    <h4>Dólar</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur sequi, minus harum ad quae a similique libero quas porro impedit? Totam, voluptates. Expedita architecto natus cum voluptatum aliquam doloribus quisquam.</p>
+                </article>
+
+                <article>
+                    <h4>Dólar</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur sequi, minus harum ad quae a similique libero quas porro impedit? Totam, voluptates. Expedita architecto natus cum voluptatum aliquam doloribus quisquam.</p>
+                </article>
+            </div>
+        </section>
+    </main>
+    
+    <footer>
+        <p>&reg; Site. Todos os direitos reservados.</p>
+    </footer>
+
 </body>
+
 </html>
