--- a/logica-js/DOM/selecao/pages/sobre.html
+++ b/logica-js/DOM/selecao/pages/sobre.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre Nós</title>
 </head>
 <body>
-    <h1>Olá</h1>
+ <header>
+        <h1>Logo</h1>
+    </header>
+    <nav>
+        <!--lista não ordenada-->
+        <ul>
+            <li> <a href="../index.html">Home</a></li>
+            <li> <a href="sobre.html">Sobre nós</a></li>
+            <li> <a href="https://google.com" target="_blank">Google</a></li>
+        </ul>
+        <!--lista não ordenada-->
+        <!-- <ol>
+            <li>home</li>
+            <li>Sobre</li>
+        </ol> -->
+    </nav>
 </body>
 </html>
