--- a/DOM/pages/usuarios.html
+++ b/DOM/pages/usuarios.html
@@ -25,8 +25,8 @@
         <ul>
             <li><a href="../index.html">Home</a></li>
             <li><a href="../index.html"> Sobre Nós</a></li>
-             <li><a href="#"> Serviços</a></li>
-             <li><a href="usuarios.html">Lista de Usuários</a></li>
+             <li><a href="../index.html"> Serviços</a></li>
+             <li><a href="#">Lista de Usuários</a></li>
             <li><a href="contato.html"> Contato</a></li>
             <li><a href="https://google.com" target="_blank">Google</a></li>
         </ul>
@@ -37,26 +37,16 @@
         </ol> -->
     </nav>
     <main>
-        
-   <section id="servico-web">
-      <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum perspiciatis veniam nisi cumque in necessitatibus molestiae sapiente neque debitis, perferendis obcaecati explicabo repudiandae illum maxime consequatur ad assumenda velit. Necessitatibus!
-      </P>
-   
-
-</section>
-
-<button id="show">Exibir</button> 
-<button id="hide">Ocultar</button> 
-
+        <h1>Usuários</h1>
+        <div id="container"></div>
     </main>
 
     <footer>
         <p>&reg; Site. Todos os diretos reservados</p>
     </footer>
 
-    <script src="../js/script.js"></script>
-    <script src="../js/servico.js"></script>
-
+   <script src="../js/script.js"></script>
+   <script src="../js/usuarios.js"></script>
 
 </body>
 </html>
