--- a/DOM/pages/contato.html
+++ b/DOM/pages/contato.html
@@ -10,8 +10,15 @@
 </head>
 
 <body>
-    <header>
+     <header>
         <h1>Logo</h1>
+        <form id="formBusca">
+            <input type="text" name=" busca"  id="busca" placeholder="Digite sua busca:"/>
+        <button type="button" id="botaoBusca">Buscar</button>
+        </form>
+        <div id="resultado"></div>
+
+        <button type="button" id="tema">Alternar Tema</button>
     </header>
     <nav>
         <!-- lista não ordenada -->
