--- a/DOM/pages/sobre.html
+++ b/DOM/pages/sobre.html
@@ -12,6 +12,13 @@
 <body>
     <header>
         <h1>Logo</h1>
+        <form id="formBusca">
+            <input type="text" name=" busca"  id="busca" placeholder="Digite sua busca:"/>
+        <button type="button" id="botaoBusca">Buscar</button>
+        </form>
+        <div id="resultado"></div>
+
+        <button type="button" id="tema">Alternar Tema</button>
     </header>
     <nav>
         <!-- lista não ordenada -->
@@ -19,6 +26,7 @@
             <li><a href="../index.html">Home</a></li>
             <li><a href="#"> Sobre Nós</a></li>
              <li><a href="servicos.html"> Serviços</a></li>
+             <li><a href="usuarios.html">Lista de Usuários</a></li>
             <li><a href="contato.html"> Contato</a></li>
             <li><a href="https://google.com" target="_blank">Google</a></li>
         </ul>
